[JDK9] Don't use permgen anymore